--- a/app/src/main/res/layout/fragment_add_food_item.xml
+++ b/app/src/main/res/layout/fragment_add_food_item.xml
@@ -6,6 +6,22 @@
     android:layout_height="match_parent">
 
 
+    <Spinner
+        android:id="@+id/foodSpinneroo"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:background="@drawable/login_rounded_button"
+        android:gravity="center_horizontal"
+        android:hint="Search Food"
+        android:spinnerMode="dialog"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.138" />
+
     <TextView
         android:id="@+id/FoodTextView"
         android:layout_width="wrap_content"
@@ -14,9 +30,10 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.238" />
+        app:layout_constraintVertical_bias="0.252" />
 
     <TextView
         android:id="@+id/gramMilText"
